--- a/src/Styles/_settings.scss
+++ b/src/Styles/_settings.scss
@@ -1,6 +1,53 @@
 
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url(font/HelveticaNeue-Medium.woff2) format('woff2'), url(font/HelveticaNeue-Medium.woff) format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
 
-$font1: 'Helvetica' sans-serif;
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url(font/HelveticaNeue-Italic.woff2) format('woff2'), url(font/HelveticaNeue-Italic.woff) format('woff');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url(font/HelveticaNeue-Thin.woff2) format('woff2'), url(font/HelveticaNeue-Thin.woff) format('woff');
+    font-weight: 100;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url(font/HelveticaNeue-Light.woff2) format('woff2'), url(font/HelveticaNeue-Light.woff) format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url(font/HelveticaNeue-Bold.woff2) format('woff2'), url(font/HelveticaNeue-Bold.woff) format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url(font/HelveticaNeue.woff2) format('woff2'), url(font/HelveticaNeue.woff) format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
 
 $color1: #0D21A1;
 $color2: #15B097;
@@ -10,3 +57,4 @@ $color4: #F5F5F5;
 
 
 
+$font: 'Helvetica Neue', sans-serif;
