--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -1,4 +1,55 @@
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url(font/HelveticaNeue-Medium.woff2) format("woff2"), url(font/HelveticaNeue-Medium.woff) format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url(font/HelveticaNeue-Italic.woff2) format("woff2"), url(font/HelveticaNeue-Italic.woff) format("woff");
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url(font/HelveticaNeue-Thin.woff2) format("woff2"), url(font/HelveticaNeue-Thin.woff) format("woff");
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url(font/HelveticaNeue-Light.woff2) format("woff2"), url(font/HelveticaNeue-Light.woff) format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url(font/HelveticaNeue-Bold.woff2) format("woff2"), url(font/HelveticaNeue-Bold.woff) format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url(font/HelveticaNeue.woff2) format("woff2"), url(font/HelveticaNeue.woff) format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 .test {
-  color: red;
+  color: #0D21A1;
+  font-family: "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  font-size: 50px;
 }
 /*# sourceMappingURL=styles.css.map */
