--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -5,5 +5,6 @@
 @import './components/concept';
 @import './components/footer';
 @import './components/header';
-@import './components/motive';
+@import './components/newsletter';
 @import './components/ressource';
+@import './components/valeurs';
