--- a/src/Styles/components/_banner.scss
+++ b/src/Styles/components/_banner.scss
@@ -1,3 +1,52 @@
-.ban-img{
-    background: url('../media/ban.png');
+.banner{
+    background-color: $color4;
+    position: relative;
+    height: 100vh;
+    .ban-img {
+        position: absolute;
+        top: 180px;
+        left: 300px;
+        margin: 0 auto;
+        width: 350px;
+        height: 500px;
+        z-index: 3;
+        img{
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+      
+    }
+    .inner-banner{
+        position: absolute;
+        top: 120px;
+        left: 300px;
+        font-size: 40px;
+        z-index: 5;
+        p:nth-child(1){
+
+            transform: translate(300px, 150px);
+            font-family: $font1;
+            font-size: 50px;
+            font-weight: bold;
+            
+        }
+        p:nth-child(2){
+
+            transform: translate(300px, 135px);
+            font-size: 70px;
+            font-family: $font2;
+            
+        }
+        p:nth-child(3){
+
+            transform: translate(300px, 110px);
+            font-family: $font1;
+            font-size: 50px;
+            font-weight:lighter;
+            
+        }
+    }
 }
+
+
