--- a/src/Styles/components/_footer.scss
+++ b/src/Styles/components/_footer.scss
@@ -1,14 +1,17 @@
 footer {
-    background-color: black;
+    position: absolute;
+    bottom: 0;
+    background-color: $color4;
     margin-top: 30px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     width: 100%;
+    height: 150px;
     text-align: left;
     font: bold 16px sans-serif;
     padding: 55px 50px;
     margin-top: 80px;
-    color: white;
+    color: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,13 +21,27 @@ footer {
 .footer-center{
     display: flex;
     align-items: center;
+    flex-direction: column;
+    .footer-company-name{
+        text-align: center;
+        margin-top: 15px;
+        margin-left: 5px;
+    }
     a{
-        color: white ;
+        color: black ;
     }
     i{
         margin-right: 5px;
     }
 
+}
+
+.footer-right{
+
+    img {
+        height: 50px;
+        width: 50px;
+    }
 }
 
 
@@ -36,18 +53,21 @@ a:hover {
 }
 
 .fab {
-    color: white;
+    color: black;
     font-size: 30px;
     margin-left: 20px;
     margin-top: 20px;
 }
 
 .fab:hover {
-    color: #D65D38;
+    color: $color3;
 }
 .footer-left.footer-center.footer-right {
     display: inline-block;
     vertical-align: top;
 }
 
-
+.logo-text{
+    margin-top: 10px;
+    height: 35px;
+}
