--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -3,6 +3,7 @@
   margin: 0%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  background-color: #F5F5F5;
 }
 
 @font-face {
@@ -170,18 +171,21 @@ section .video iframe {
 }
 
 footer {
-  background-color: black;
+  position: absolute;
+  bottom: 0;
+  background-color: #F5F5F5;
   margin-top: 30px;
   -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
           box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 100%;
+  height: 150px;
   text-align: left;
   font: bold 16px sans-serif;
   padding: 55px 50px;
   margin-top: 80px;
-  color: white;
+  color: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -200,14 +204,29 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer-center .footer-company-name {
+  text-align: center;
+  margin-top: 15px;
+  margin-left: 5px;
 }
 
 .footer-center a {
-  color: white;
+  color: black;
 }
 
 .footer-center i {
   margin-right: 5px;
+}
+
+.footer-right img {
+  height: 50px;
+  width: 50px;
 }
 
 a.footer {
@@ -219,19 +238,24 @@ a:hover {
 }
 
 .fab {
-  color: white;
+  color: black;
   font-size: 30px;
   margin-left: 20px;
   margin-top: 20px;
 }
 
 .fab:hover {
-  color: #D65D38;
+  color: #0A0A0A;
 }
 
 .footer-left.footer-center.footer-right {
   display: inline-block;
   vertical-align: top;
+}
+
+.logo-text {
+  margin-top: 10px;
+  height: 35px;
 }
 
 a:hover {
