--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -177,8 +177,8 @@
   top: 180px;
   left: 300px;
   margin: 0 auto;
-  width: 350px;
-  height: 500px;
+  width: 500px;
+  height: 350px;
   z-index: 3;
 }
 
@@ -277,6 +277,8 @@ section .video iframe {
 }
 
 footer {
+  font-size: 16px;
+  font-family: "Helvetica Neue", sans-serif;
   position: absolute;
   bottom: 0;
   background-color: #F5F5F5;
@@ -330,9 +332,12 @@ footer {
   margin-right: 5px;
 }
 
+.footer-right a {
+  margin-right: 10px;
+}
+
 .footer-right img {
-  height: 50px;
-  width: 50px;
+  height: 45px;
 }
 
 a.footer {
