--- a/src/Styles/_settings.scss
+++ b/src/Styles/_settings.scss
@@ -2,7 +2,7 @@
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
-    background-color: #F5F5F5;
+    background-color: #FFFAF4;
 }
 
 @font-face {
@@ -170,7 +170,7 @@ $color2: #15B097;
 $color3: #D65D38;
 
 $color3: #0A0A0A;
-$color4: #F5F5F5;
+$color4: #FFFAF4;
 
 
 
