--- a/src/Styles/components/_banner.scss
+++ b/src/Styles/components/_banner.scss
@@ -1,50 +1,83 @@
-.banner{
-    background-color: $color4;
-    position: relative;
-    height: 100vh;
-    .ban-img {
-        position: absolute;
-        top: 180px;
-        left: 300px;
-        margin: 0 auto;
-        width: 500px;
-        height: 350px;
-        z-index: 3;
-        img{
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-        }
-      
-    }
-    .inner-banner{
-        position: absolute;
-        top: 120px;
-        left: 300px;
-        font-size: 40px;
-        z-index: 5;
-        p:nth-child(1){
+.header-title {
+    top: 30%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    left: 30%;
+}
 
-            transform: translate(300px, 150px);
-            font-family: $font1;
-            font-size: 50px;
-            font-weight: bold;
-            
-        }
-        p:nth-child(2){
+.header-img {
+    top: 30%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    transform: scaleX(-1);
+    width: 630px;
+    height: 434px;
+    left: 50%;
+}
 
-            transform: translate(300px, 135px);
-            font-size: 70px;
-            font-family: $font2;
-            
-        }
-        p:nth-child(3){
+.container-text {
+    position: absolute;
+    top: 30%;
+    left: 30%;
+    color: #353535;
+}
 
-            transform: translate(300px, 110px);
-            font-family: $font1;
-            font-size: 50px;
-            font-weight:lighter;
-            
-        }
-    }
+.title-1 {
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    top: 0;
+}
+
+.title-2 {
+    font-size: 70px;
+    font-family: "Denton 500", sans-serif;
+    left: 0;
+    top: 0;
+}
+
+.title-3 {
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 50px;
+    font-weight: lighter;
+    top: 0;
+}
+
+p {
+    margin: 0;
+}
+
+.scroll-btn {
+    width: 80px;
+    border: solid 15px black;
+}
+
+.scroll-down {
+    position: absolute;
+    width: 53px;
+    height: 53px;
+    top: 70%;
+    left: 50%;
+}
+
+.scroll-down2 {
+    position: absolute;
+    width: 53px;
+    height: 53px;
+    top: 70%;
+    left: 50%;
+}
+
+.scroll-down:hover {
+    display: none;
+    cursor: pointer;
+}
+
+.scroll-down2:hover {
+    display: inline;
+    cursor: pointer;
 }
