--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -3,7 +3,7 @@
   margin: 0%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color: #F5F5F5;
+  background-color: #FFFAF4;
 }
 
 @font-face {
@@ -166,58 +166,97 @@
   font-display: swap;
 }
 
-.banner {
-  background-color: #F5F5F5;
-  position: relative;
-  height: 100vh;
-}
-
-.banner .ban-img {
+.header-title {
+  top: 30%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
   position: absolute;
-  top: 180px;
-  left: 300px;
-  margin: 0 auto;
-  width: 500px;
-  height: 350px;
-  z-index: 3;
+  left: 30%;
 }
 
-.banner .ban-img img {
-  height: 100%;
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.banner .inner-banner {
+.header-img {
+  top: 30%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
   position: absolute;
-  top: 120px;
-  left: 300px;
-  font-size: 40px;
-  z-index: 5;
+  -webkit-transform: scaleX(-1);
+          transform: scaleX(-1);
+  width: 630px;
+  height: 434px;
+  left: 50%;
 }
 
-.banner .inner-banner p:nth-child(1) {
-  -webkit-transform: translate(300px, 150px);
-          transform: translate(300px, 150px);
+.container-text {
+  position: absolute;
+  top: 30%;
+  left: 30%;
+  color: #353535;
+}
+
+.title-1 {
   font-family: "Helvetica Neue", sans-serif;
   font-size: 50px;
   font-weight: bold;
+  top: 0;
 }
 
-.banner .inner-banner p:nth-child(2) {
-  -webkit-transform: translate(300px, 135px);
-          transform: translate(300px, 135px);
+.title-2 {
   font-size: 70px;
-  font-family: "Denton test", sans-serif;
+  font-family: "Denton 500", sans-serif;
+  left: 0;
+  top: 0;
 }
 
-.banner .inner-banner p:nth-child(3) {
-  -webkit-transform: translate(300px, 110px);
-          transform: translate(300px, 110px);
+.title-3 {
   font-family: "Helvetica Neue", sans-serif;
   font-size: 50px;
   font-weight: lighter;
+  top: 0;
+}
+
+p {
+  margin: 0;
+}
+
+.scroll-btn {
+  width: 80px;
+  border: solid 15px black;
+}
+
+.scroll-down {
+  position: absolute;
+  width: 53px;
+  height: 53px;
+  top: 70%;
+  left: 50%;
+}
+
+.scroll-down2 {
+  position: absolute;
+  width: 53px;
+  height: 53px;
+  top: 70%;
+  left: 50%;
+}
+
+.scroll-down:hover {
+  display: none;
+  cursor: pointer;
+}
+
+.scroll-down2:hover {
+  display: inline;
+  cursor: pointer;
 }
 
 html {
@@ -281,7 +320,7 @@ footer {
   font-family: "Helvetica Neue", sans-serif;
   position: absolute;
   bottom: 0;
-  background-color: #F5F5F5;
+  background-color: #FFFAF4;
   margin-top: 30px;
   -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
           box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
@@ -381,7 +420,7 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: #F5F5F5;
+  background-color: #FFFAF4;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
