--- a/src/Styles/components/_footer.scss
+++ b/src/Styles/components/_footer.scss
@@ -1,68 +1,59 @@
 .footer {
-    font-size: 16px;
+    margin-top: 300px;
+    font-size: 14px;
     font-family: $font1;
-    position: absolute;
-    bottom: 0;
     background-color: $color4;
-    margin-top: 30px;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
     width: 100%;
-    height: 150px;
     text-align: left;
     font: bold 16px sans-serif;
-    padding: 55px 50px;
-    margin-top: 80px;
-    color: black;
+    padding: 50px 150px;
+    color: #353535;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
-
-.footer-right{
-
+.footer-right {
     margin-bottom: -22px;
-    a{
+    a {
         margin-right: 10px;
     }
-    img{
+    img {
         height: 45px;
     }
 }
 
-.footer-left{
+.footer-left {
     font-family: $font2;
     font-weight: lighter;
     margin-bottom: -20px;
-    margin-left: 130px;
 }
 
-
-a.footer{
+a.footer {
     text-decoration: none;
 }
+
 a:hover {
     text-decoration: none;
 }
 
-.fab {
-    color: black;
-    font-size: 30px;
-    margin-left: 20px;
-    margin-top: 20px;
-}
-
-.fab:hover {
-    color: $color3;
-}
-.footer-left.footer-center.footer-right {
-    display: inline-block;
-    vertical-align: top;
-}
-
-.logo-text{
+.logo-text {
     margin-top: 10px;
     height: 35px;
+}
+
+.footer-img {
+ transition: 0.1s;
+ -webkit-transition: 0.1s;
+ -moz-transition: 0.1s;
+ -ms-transition: 0.1s;
+ -o-transition: 0.1s;
+}
+
+.footer-img:hover {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
 }
