--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -166,97 +166,84 @@
   font-display: swap;
 }
 
-.header-title {
-  top: 30%;
+.container {
+  position: relative;
+  color: #353535;
+  background-color: transparent !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  text-align: center;
+  min-height: 100vh;
+}
+
+.header-text {
+  bottom: 50%;
+  right: 45%;
   position: absolute;
-  left: 30%;
+  background: transparent;
 }
 
 .header-img {
-  top: 30%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
+  left: 45%;
   position: absolute;
   -webkit-transform: scaleX(-1);
           transform: scaleX(-1);
   width: 630px;
   height: 434px;
-  left: 50%;
-}
-
-.container-text {
-  position: absolute;
-  top: 30%;
-  left: 30%;
-  color: #353535;
 }
 
 .title-1 {
   font-family: "Helvetica Neue", sans-serif;
   font-size: 50px;
   font-weight: bold;
-  top: 0;
+  background: transparent;
 }
 
 .title-2 {
   font-size: 70px;
   font-family: "Denton 500", sans-serif;
-  left: 0;
-  top: 0;
+  background: transparent;
 }
 
 .title-3 {
   font-family: "Helvetica Neue", sans-serif;
   font-size: 50px;
   font-weight: lighter;
-  top: 0;
+  background: transparent;
+}
+
+.scroll-down {
+  top: 80%;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 53px;
+  height: 53px;
+  transition: 0.1s;
+  -webkit-transition: 0.1s;
+  -moz-transition: 0.1s;
+  -ms-transition: 0.1s;
+  -o-transition: 0.1s;
+}
+
+.scroll-down:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
 }
 
 p {
   margin: 0;
-}
-
-.scroll-btn {
-  width: 80px;
-  border: solid 15px black;
-}
-
-.scroll-down {
-  position: absolute;
-  width: 53px;
-  height: 53px;
-  top: 70%;
-  left: 50%;
-}
-
-.scroll-down2 {
-  position: absolute;
-  width: 53px;
-  height: 53px;
-  top: 70%;
-  left: 50%;
-}
-
-.scroll-down:hover {
-  display: none;
-  cursor: pointer;
-}
-
-.scroll-down2:hover {
-  display: inline;
-  cursor: pointer;
 }
 
 html {
@@ -315,24 +302,116 @@ section .video iframe {
   height: 392px;
 }
 
-.footer {
-  font-size: 16px;
-  font-family: "Helvetica Neue", sans-serif;
+.container-concept {
+  margin-top: 50px;
+  position: relative;
+  color: #353535;
+  background-color: transparent !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 50px;
+  bottom: 50px;
+}
+
+.circle {
   position: absolute;
-  bottom: 0;
+  width: 287px;
+  height: 37px;
+  border: solid #d65d38 0.5px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  transform: rotate(13.5deg);
+  -webkit-transform: rotate(13.5deg);
+  -moz-transform: rotate(13.5deg);
+  -ms-transform: rotate(13.5deg);
+  -o-transform: rotate(13.5deg);
+}
+
+.concept-title {
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  position: absolute;
+  background: transparent !important;
+}
+
+.concept-p {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 688px;
+  height: 124px;
+}
+
+.more {
+  margin-top: 20px;
+  float: right;
+  width: 104px;
+  height: 27px;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+}
+
+.more:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
+.quote {
+  margin-top: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: "Helvetica Neue", sans-serif;
+  font-weight: lighter;
+  font-size: 25px;
+}
+
+.fa-quote-left {
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  color: #3B51D1;
+}
+
+.fa-quote-right {
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+  color: #3B51D1;
+}
+
+.footer {
+  margin-top: 300px;
+  font-size: 14px;
+  font-family: "Helvetica Neue", sans-serif;
   background-color: #FFFAF4;
-  margin-top: 30px;
-  -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-          box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   width: 100%;
-  height: 150px;
   text-align: left;
   font: bold 16px sans-serif;
-  padding: 55px 50px;
-  margin-top: 80px;
-  color: black;
+  padding: 50px 150px;
+  color: #353535;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -360,7 +439,6 @@ section .video iframe {
   font-family: "Denton test", sans-serif;
   font-weight: lighter;
   margin-bottom: -20px;
-  margin-left: 130px;
 }
 
 a.footer {
@@ -371,25 +449,25 @@ a:hover {
   text-decoration: none;
 }
 
-.fab {
-  color: black;
-  font-size: 30px;
-  margin-left: 20px;
-  margin-top: 20px;
-}
-
-.fab:hover {
-  color: #0A0A0A;
-}
-
-.footer-left.footer-center.footer-right {
-  display: inline-block;
-  vertical-align: top;
-}
-
 .logo-text {
   margin-top: 10px;
   height: 35px;
+}
+
+.footer-img {
+  transition: 0.1s;
+  -webkit-transition: 0.1s;
+  -moz-transition: 0.1s;
+  -ms-transition: 0.1s;
+  -o-transition: 0.1s;
+}
+
+.footer-img:hover {
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
 }
 
 a:hover {
@@ -419,17 +497,20 @@ a {
 }
 
 .logo {
-  text-transform: uppercase;
-  font-weight: bold;
-  letter-spacing: 1px;
   height: 40px;
+  width: 155px;
 }
 
 .menu a {
-  color: #000000;
-  margin-left: 59px;
+  color: #353535;
+  margin-left: 5em;
   font-size: 16px;
   font-family: "Helvetica Neue", sans-serif;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
 }
 
 a:hover {
