--- a/src/Styles/components/_newsletter.scss
+++ b/src/Styles/components/_newsletter.scss
@@ -11,7 +11,7 @@ select:focus {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 120px;
+    margin-top: 350px;
 }
 
 .newsletter-title {
@@ -24,11 +24,12 @@ select:focus {
 
 .newsletter-content {
     font-size: 16px;
-    width: 915px;
+    width: 765px;
     height: 60px;
-    margin-top: 200px;
+    margin-top: 130px;
     align-items: center;
     position: absolute;
+    text-align: center;
 }
 
 .send:hover {
@@ -41,7 +42,7 @@ select:focus {
 }
 .mail {
     margin-right: 100px;
-    margin-top: 200px;
+    margin-top: 180px;
     align-items: center;
     position: reslative;
     justify-content: center;
@@ -51,7 +52,7 @@ select:focus {
 .send {
     position: absolute;
     margin-top: 7.5px;
-    margin-left: 230px;
+    margin-left: 280px;
     width: 70px;
     height: 70px;
     transition: 0.1s;
@@ -62,6 +63,7 @@ select:focus {
 }
 
 .form-email {
+    color: #353535;
     font-size: 16px;
     font-family: $font1;
     font-weight: lighter;
@@ -70,7 +72,7 @@ select:focus {
     border-top: none;
     border-left: none;
     border-right: none;
-    border-bottom: solid 1px black;
+    border-bottom: solid 1px #353535;
 }
 
 .n-icon {
