--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -403,7 +403,7 @@ section .video iframe {
 }
 
 .footer {
-  margin-top: 182px;
+  margin-top: 280px;
   font-size: 14px;
   font-family: "Helvetica Neue", sans-serif;
   background-color: #FFFAF4;
@@ -431,12 +431,9 @@ section .video iframe {
   margin-right: 10px;
 }
 
-.footer-right img {
-  height: 45px;
-}
-
 .footer-left {
   font-family: "Denton test", sans-serif;
+  font-size: 14px;
   font-weight: lighter;
   margin-bottom: -20px;
 }
@@ -455,6 +452,8 @@ a:hover {
 }
 
 .footer-img {
+  width: 60px;
+  height: 60px;
   transition: 0.1s;
   -webkit-transition: 0.1s;
   -moz-transition: 0.1s;
@@ -468,6 +467,11 @@ a:hover {
   -moz-transform: scale(1.2);
   -ms-transform: scale(1.2);
   -o-transform: scale(1.2);
+}
+
+.footer-logo {
+  width: 155px;
+  height: 40px;
 }
 
 a:hover {
@@ -536,7 +540,7 @@ select:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 120px;
+  margin-top: 350px;
 }
 
 .newsletter-title {
@@ -549,13 +553,14 @@ select:focus {
 
 .newsletter-content {
   font-size: 16px;
-  width: 915px;
+  width: 765px;
   height: 60px;
-  margin-top: 200px;
+  margin-top: 130px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
+  text-align: center;
 }
 
 .send:hover {
@@ -569,7 +574,7 @@ select:focus {
 
 .mail {
   margin-right: 100px;
-  margin-top: 200px;
+  margin-top: 180px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -585,7 +590,7 @@ select:focus {
 .send {
   position: absolute;
   margin-top: 7.5px;
-  margin-left: 230px;
+  margin-left: 280px;
   width: 70px;
   height: 70px;
   transition: 0.1s;
@@ -596,6 +601,7 @@ select:focus {
 }
 
 .form-email {
+  color: #353535;
   font-size: 16px;
   font-family: "Helvetica Neue", sans-serif;
   font-weight: lighter;
@@ -604,7 +610,7 @@ select:focus {
   border-top: none;
   border-left: none;
   border-right: none;
-  border-bottom: solid 1px black;
+  border-bottom: solid 1px #353535;
 }
 
 .n-icon {
@@ -612,5 +618,90 @@ select:focus {
   margin-top: 25px;
   width: 75px;
   height: 75px;
+}
+
+.container-valeurs {
+  margin-top: 150px;
+  position: relative;
+  color: #353535;
+  background-color: transparent !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 50px;
+  bottom: 50px;
+}
+
+.logo-n {
+  width: 72px;
+  height: 72px;
+  margin-left: 182px;
+  margin-top: 25px;
+}
+
+.valeurs-title {
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  position: absolute;
+  background: transparent !important;
+}
+
+.container-1 {
+  position: relative;
+}
+
+.span1 {
+  font-family: "Dento 900";
+  font-size: 200px;
+  font-weight: 900;
+  color: #d65d38;
+  -webkit-filter: opacity(20%);
+          filter: opacity(20%);
+  line-height: 30px;
+  margin-left: 190px;
+  position: absolute;
+}
+
+.text-1 {
+  width: 345px;
+  height: 150px;
+  margin-left: 243px;
+  position: absolute;
+  background: transparent;
+  line-height: 25px;
+}
+
+.container-2 {
+  position: relative;
+}
+
+.span2 {
+  font-family: "Dento 900";
+  font-size: 200px;
+  font-weight: 900;
+  color: #d65d38;
+  -webkit-filter: opacity(20%);
+          filter: opacity(20%);
+  line-height: 30px;
+  position: absolute;
+  margin-left: 1023px;
+  margin-top: 50px;
+}
+
+.text-2 {
+  width: 345px;
+  height: 175px;
+  position: absolute;
+  background: transparent;
+  line-height: 25px;
+  margin-left: 852px;
+  margin-top: 80px;
 }
 /*# sourceMappingURL=styles.css.map */
