--- a/src/Styles/_settings.scss
+++ b/src/Styles/_settings.scss
@@ -5,6 +5,19 @@
     background-color: #FFFAF4;
 }
 
+html {
+    height: 100%;
+    scroll-behavior: smooth;
+    
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+body {
+    height: 100%;
+}
+
 @font-face {
     font-family: 'Denton test';
     src: url(font/Denton-Test-Black-900.woff) format('woff');
@@ -46,7 +59,7 @@
 }
 
 @font-face {
-    font-family: 'Denton test';
+    font-family: 'Denton 400';
     src: url(font/Denton-Test-Regular-400.woff) format('woff');
     font-weight: normal;
     font-style: normal;
@@ -54,7 +67,7 @@
 }
 
 @font-face {
-    font-family: 'Denton test';
+    font-family: 'Denton 100', sans-serif;
     src: url(font/Denton-Test-Thin-100.woff) format('woff');
     font-weight: normal;
     font-style: normal;
@@ -78,7 +91,7 @@
 }
 
 @font-face {
-    font-family: 'Helvetica Neue';
+    font-family: 'Helvetica 100', sans-serif;
     src: url(font/HelveticaNeue-Thin.woff2) format('woff2'), url(font/HelveticaNeue-Thin.woff) format('woff');
     font-weight: 100;
     font-style: normal;
@@ -94,7 +107,7 @@
 }
 
 @font-face {
-    font-family: 'Helvetica Neue';
+    font-family: 'Helvetica Bold';
     src: url(font/HelveticaNeue-Bold.woff2) format('woff2'), url(font/HelveticaNeue-Bold.woff) format('woff');
     font-weight: bold;
     font-style: normal;
@@ -165,11 +178,11 @@
     font-display: swap;
 }
 
-$color1: #0D21A1;
+$color1: #3B51D1;
 $color2: #15B097;
 $color3: #D65D38;
 
-$color3: #0A0A0A;
+$color3: #353535;
 $color4: #FFFAF4;
 
 
