--- a/src/Styles/components/_chaine.scss
+++ b/src/Styles/components/_chaine.scss
@@ -1,46 +1,130 @@
-html{
-    font-family: $font1;
+.video-container {
+    margin-left: 20%;
+    margin-top: 100px;
+    position: relative;
+    height: 500px;
+    color: #353535;
+    background-color: transparent !important;
 }
-h1{
+
+.video-title {
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 40px;
     font-weight: bold;
-    font-size: 28px;
-}
-.test{
-    color: $color1;
-    font-family: $font1;
-    font-weight: bold;
-    font-size: 50px;
-}
-section{
     position: absolute;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    text-align: center;
-    width: 100%;
-    padding-left: 30px;
-    padding-right: 30px;
-    article{
-        margin-right: 30px;
-        p{
-            margin-top: 15px;
-        }
-    }
-    button{
-        background-color: grey;
-        width: 213px;
-        height: 59px;
-        border-radius: 93px;
-        margin-top: 50px;
-    }
-
-    .video{
-        iframe{
-            background-color: grey;
-            width: 628px;
-            height: 392px;
-        }
-    }
-
+    background: transparent !important;
 }
 
+.video-content {
+    display: flex;
+    margin-top: 8%;
+    font-family: Helvetica Neue;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 25px;
+    position: absolute;
+    width: 465px;
+    height: 143px;
+}
+
+.video {
+    margin-left: 130%;
+    position: absolute;
+    width: 463px;
+    height: 289px;
+    background: #8d8989;
+}
+
+@media only screen and (min-width: 2560px) {
+    .tremplin-container {
+        margin-top: 750px;
+    }
+    .tremplin-title {
+        margin-left: 450px;
+    }
+    .t1 {
+        font-size: 80px;
+    }
+    .t2 {
+        margin-top: 15px;
+        font-size: 40px;
+    }
+    .tremplin-content {
+        width: 550px;
+        font-size: 18px;
+        margin-left: 450px;
+        margin-top: 80px;
+    }
+    .container-lance-toi {
+        margin-left: 600px;
+        margin-top: 85px;
+        width: 400px;
+    }
+    .lance-toi {
+        font-size: 30px;
+    }
+    .tremplin-ytb {
+        margin-top: 120px;
+        width: 563px;
+        height: 389px;
+        margin-right: 222px;
+    }
+}
+
+@media only screen and (max-width: 1440px) {
+    .tremplin-container {
+        top: -50px;
+    }
+    .video-container {
+        margin-left: 15%;
+    }
+    .video {
+        margin-left: 113%;
+    }
+}
+
+@media only screen and (max-width: 390px) {
+    .tremplin-container {
+        margin-top: 530px;
+    }
+    .tremplin-title {
+        width: 360px;
+        height: 127px;
+        margin-left: 38px;
+    }
+    .t1 {
+        font-size: 60px;
+        font-weight: bold;
+    }
+    .t2 {
+        margin-top: 15px;
+        font-size: 30px;
+        line-height: 40px;
+    }
+    .tremplin-content {
+        margin-left: 30px;
+        margin-top: 56px;
+        font-size: 12px;
+        width: 257px;
+        height: 224px;
+    }
+    .tremplin-ytb {
+        margin-top: 350px;
+        width: 267px;
+        height: 165px;
+        margin-right: -60px;
+    }
+    .container-lance-toi {
+        margin-top: 280px;
+        margin-left: 161px;
+    }
+    .lance-toi {
+        font-size: 16px;
+    }
+    .lance-img {
+        width: 50px;
+        height: 50px;
+        margin-right: 30px;
+    }
+}
