--- a/src/Styles/components/_concept.scss
+++ b/src/Styles/components/_concept.scss
@@ -1,17 +1,15 @@
 .container-concept {
+    margin-left: 20%;
     margin-top: 50px;
     position: relative;
+    height: 500px;
     color: #353535;
     background-color: transparent !important;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 50px;
-    bottom: 50px;
 }
 
 .circle {
     position: absolute;
+    margin-top: 10px;
     width: 287px;
     height: 37px;
     border: solid #d65d38 0.5px;
@@ -35,51 +33,96 @@
     background: transparent !important;
 }
 
-.concept-p {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    width: 688px;
-    height: 124px;
+.lamp {
+    margin-top: 40px;
+    margin-left: 50%;
+    width: 390px;
+    height: 375px;
 }
 
-.more {
-    margin-top: 20px;
-    float: right;
-    width: 104px;
-    height: 27px;
-    transition: 0.2s; 
-    -webkit-transition: 0.2s;
-    -moz-transition: 0.2s;
-    -ms-transition: 0.2s;
-    -o-transition: 0.2s;
+@media only screen and (min-width: 2560px) {
+    .container-concept {
+        margin-top: 0;
+        margin-bottom: 0;
+        padding: 0;
+    }
+    .concept-title {
+        font-size: 50px;
+    }
+    .circle {
+        width: 390px;
+        height: 50px;
+        background: transparent;
+    }
+    .concept-p {
+        margin-top: 100px;
+        font-size: 18px;
+    }
+    .more {
+        margin-top: 50px;
+        width: 130px;
+        height: 57px;
+    }
+    .quote {
+        margin-top: 200px;
+        font-size: 25px;
+    }
 }
 
-.more:hover {
-    cursor: pointer;
-    transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-}
-.quote {
-    margin-top: 70px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Helvetica Neue", sans-serif;
-    font-weight: lighter;
-    font-size: 25px;
+
+@media only screen and (max-width: 390px) {
+    .container-concept {
+        margin-top: -30px;
+    }
+    .concept-title {
+        font-size: 28px;
+    }
+    .circle {
+        width: 191px;
+        height: 24px;
+    }
+    .concept-p {
+        margin-top: -20px;
+        width: 315px;
+        height: 146px;
+        font-size: 12px;
+    }
+    .more {
+        width: 83px;
+        height: 22px;
+    }
+    .quote {
+        margin-top: 120px;
+        margin-left: 41px;
+        text-align: center;
+        width: 264px;
+        height: 36px;
+        font-size: 16px;
+    }
+    .fa-quote-left {
+        margin-left: 10px;
+        transform: translateY(-140%);
+        color: #3b51d1;
+        -webkit-transform: translateY(-140%);
+        -moz-transform: translateY(-140%);
+        -ms-transform: translateY(-140%);
+        -o-transform: translateY(-140%);
+    }
+    .fa-quote-right {
+        margin-left: -10px;
+        transform: translateY(140%);
+        -webkit-transform: translateY(140%);
+        -moz-transform: translateY(140%);
+        -ms-transform: translateY(140%);
+        -o-transform: translateY(140%);
+    }
 }
 
-.fa-quote-left {
-    transform: translateY(-50%);
-    color: #3B51D1;
-
+@media only screen and (max-width: 1440px) {
+    .container-concept {
+        margin-left: 15%;
+    }
+    .lamp {
+        margin-left: 45%;
+    }
 }
-.fa-quote-right {
-    transform: translateY(50%);
-    color: #3B51D1;
-}
-
