--- a/src/Styles/components/_valeurs.scss
+++ b/src/Styles/components/_valeurs.scss
@@ -1,75 +1,174 @@
 .container-valeurs {
-  margin-top: 150px;
   position: relative;
   color: #353535;
   background-color: transparent !important;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 50px;
-  bottom: 50px;
+  margin-left: 20%;
+  position: relative;
 }
 
 .logo-n {
-    width: 72px;
-    height: 72px;
-    margin-left: 182px;
-    margin-top: 25px;
+  width: 72px;
+  height: 72px;
+  margin-left: 160px;
+  position: absolute;
 }
 .valeurs-title {
+  position: absolute;
   font-family: "Helvetica Neue", sans-serif;
   font-size: 40px;
   font-weight: bold;
-  position: absolute;
   background: transparent !important;
 }
 
-.container-1 {
-  position: relative;
+.grid-valeurs {
+  margin-top: 8%;
+  margin-left: 20%;
+  display: grid;
+  grid-template-columns: auto auto;
 }
 
-.span1 {
-  font-family: "Dento 900";
-  font-size: 200px;
-  font-weight: 900;
-  color: #d65d38;
-  filter: opacity(20%);
-  line-height: 30px;
-  margin-left: 190px;
-  position: absolute;
+.engagement {
+  display: flex;
 }
 
-.text-1 {
-  width: 345px;
-  height: 150px;
-  margin-left: 243px;
-  position: absolute;
+.grid-img:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+}
+
+.accessibilite {
+  display: flex;
+}
+
+.pragmatisme {
+  display: flex;
+}
+
+.grid-img {
+  transition: 0.6s;
+  -webkit-transition: 0.6s;
+  -moz-transition: 0.6s;
+  -ms-transition: 0.6s;
+  -o-transition: 0.6s;
+  width: 170px;
+  height: 170px;
+  margin-bottom: 100px;
+}
+
+.grid-title {
+  margin-left: 2%;
   background: transparent;
-  line-height: 25px;
-}
-
-.container-2 {
-  position: relative;
-}
-
-.span2 {
-  font-family: "Dento 900";
-  font-size: 200px;
-  font-weight: 900;
-  color: #d65d38;
-  filter: opacity(20%);
-  line-height: 30px;
   position: absolute;
-  margin-left: 1023px;
-  margin-top: 50px;
+  font-family: "Helvetica Neue", sans-serif;
+  font-weight: 500;
+  font-size: 25px;
 }
 
-.text-2 {
-  width: 345px;
-  height: 175px;
-  position: absolute;
+.grid-p {
+  font-style: normal;
   background: transparent;
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 16px;
+  width: 320px;
   line-height: 25px;
-  margin-left: 852px;
-  margin-top: 80px;
+  font-weight: 400;
+}
+
+.pragmatisme {
+  .grid-title {
+    margin-top: 25px;
+    margin-left: 50px;
+  }
+}
+
+// .container-1 {
+//   position: relative;
+// }
+
+// .span1 {
+//   font-family: "Dento 900";
+//   font-size: 200px;
+//   font-weight: 900;
+//   color: #d65d38;
+//   filter: opacity(20%);
+//   line-height: 30px;
+//   left: 500px;
+//   position: absolute;
+//   width: 393px;
+//   height: 205px;
+// }
+
+// .text-1 {
+//   width: 345px;
+//   height: 150px;
+//   margin-left: 550px;
+//   position: absolute;
+//   background: transparent;
+//   line-height: 25px;
+//   top: 10px;
+//   font-family: Helvetica Neue;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 16px;
+//   line-height: 25px;
+// }
+
+// .container-2 {
+//   position: relative;
+// }
+
+// .span2 {
+//   font-family: "Dento 900";
+//   font-size: 200px;
+//   font-weight: 900;
+//   color: #d65d38;
+//   filter: opacity(20%);
+//   line-height: 30px;
+//   position: absolute;
+//   right: 500px;
+//   margin-top: 80px;
+// }
+
+// .text-2 {
+//   width: 345px;
+//   height: 175px;
+//   position: absolute;
+//   background: transparent;
+//   line-height: 25px;
+//   right: 480px;
+//   top: 115px;
+//   font-family: Helvetica Neue;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 16px;
+//   line-height: 25px;
+// }
+
+@media only screen and (min-width: 2560px) {
+  .valeurs-title {
+    font-size: 50px;
+  }
+  .logo-n {
+    width: 90px;
+    height: 90px;
+    margin-left: 222px;
+    margin-top: 34px;
+  }
+}
+
+@media only screen and (max-width: 1440px) {
+.container-valeurs {
+  margin-left: 15%;
+}
+.grid-valeurs {
+  margin-left: 15%;
+}
+}
+
+@media only screen and (max-width: 390px) {
+
 }
