ressources, logo nav,

--- a/src/Styles/components/_header.scss
+++ b/src/Styles/components/_header.scss
@@ -7,8 +7,6 @@ a {
 }
 
 .header {
-    position: sticky;
-    position: fixed;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -17,6 +15,7 @@ a {
 }
 
 .logo {
+    margin-top: 27px;
     height: 40px;
     width: 155px;
 }
