--- a/src/Styles/components/_ressource.scss
+++ b/src/Styles/components/_ressource.scss
@@ -29,7 +29,7 @@ h1 {
   width: 118px;
   height: 118px;
 }
-.ressources-title {
+.ressources-titre {
   font-family: "Helvetica Neue", sans-serif;
   font-size: 40px;
   font-weight: bold;
@@ -51,7 +51,6 @@ h1 {
     font-family: "Helvetica Medium", sans-serif;
     font-size: 26px;
     font-weight: bold;
-    padding-top: 46px;
     padding-left: 46px;
     padding-right: 46px;
   }
@@ -73,7 +72,6 @@ h1 {
     background: none;
     width: 315px;
     height: 225px;
-    margin-top: 20px;
     margin-bottom: 10px;
   }
 }
@@ -93,7 +91,6 @@ h1 {
     font-family: "Helvetica Medium", sans-serif;
     font-size: 26px;
     font-weight: bold;
-    padding-top: 46px;
     padding-left: 46px;
     padding-right: 46px;
   }
@@ -106,17 +103,19 @@ h1 {
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
+    margin-top: 30px;
     line-height: 25px;
-    padding-top: 30px;
     padding-left: 46px;
     padding-right: 46px;
   }
   .marteau {
     margin-left: 20px;
+    margin-top: -50px;
+    overflow: hidden;
     background: none;
-    width: 225px;
-    height: 260px;
-    transform: rotate(-32.9deg);
+    width: 222px;
+    height: 258px;
+    transform: rotate(-26.83deg);
   }
 }
 .aide {
@@ -135,7 +134,6 @@ h1 {
     font-family: "Helvetica Medium", sans-serif;
     font-size: 26px;
     font-weight: bold;
-    padding-top: 46px;
     padding-left: 46px;
     padding-right: 46px;
   }
@@ -158,7 +156,6 @@ h1 {
     background: none;
     width: 200px;
     height: 215px;
-    margin-top: 40px;
     margin-bottom: 23px;
     overflow: hidden;
     margin-left: 103px;
@@ -203,14 +200,6 @@ h1 {
   -o-transform: scale(1.2);
 }
 
-.developper:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -o-transform: scale(1.1);
-}
 @media only screen and (min-width: 2560px) {
   .container-ressources {
     margin-top: 400px;
